<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 机械臂视觉功能集成包的 ROS2 清单文件，声明构建方式以及节点运行所需依赖。 -->
<package format="3">
  <name>arm</name>
  <version>0.0.0</version>
  <description>机械臂视觉功能集成包。</description>
  <maintainer email="yuan@todo.todo">yuan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
